feat: add hibernate-validator and jakarta.validation-api dependencies; refactor SecurityConfig and WebSocketConfig for improved dependency injection